<resources>
    <string name="app_name">1809B</string>
    <string name="text_loading_reload">重新加载</string>
    <string name="text_loading_loading">正在加载...</string>
    <string name="text_loading_error">加载失败，请重试。</string>
    <string name="text_start_umeng_share">友盟分享</string>
    <string name="text_start_umeng_login">友盟登录</string>
    <string name="text_start_bdmap">百度地图</string>
    <string name="text_start_jpush">极光推送</string>
    <string name="text_start_easemob">环信</string>
    <string name="text_start_contact">联系人列表</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_main_activity_title">ZhiHu</string>
</resources>
